--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 07 11:21:42 CST 2018
-sdk.dir=/home/eirot/android_sdk_linux
+#Fri Dec 13 11:07:40 CST 2019
+ndk.dir=C\:\\Eirot\\sdk_tools_windows\\ndk-bundle
+sdk.dir=C\:\\Eirot\\sdk_tools_windows
